--- a/nft-market/public/index.html
+++ b/nft-market/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NFTM by PKB</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Contact pkg1028@gmail.com for more</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
